--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/http": "5.2.11",
     "@angular/platform-browser": "5.2.11",
     "@angular/platform-browser-dynamic": "5.2.11",
+    "@ionic-native/analytics-firebase": "^4.20.0",
     "@ionic-native/call-number": "^4.19.0",
     "@ionic-native/core": "^4.18.0",
     "@ionic-native/diagnostic": "^4.19.0",
@@ -39,6 +40,7 @@
     "cordova-plugin-actionsheet": "^2.3.3",
     "cordova-plugin-device": "^2.0.2",
     "cordova-plugin-dialogs": "^2.0.1",
+    "cordova-plugin-firebase-analytics": "1.1.1",
     "cordova-plugin-geolocation": "^4.0.1",
     "cordova-plugin-googlemaps": "^2.5.2",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
@@ -48,8 +50,8 @@
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
     "cordova-sqlite-storage": "^2.6.0",
-    "cordova-support-android-plugin": "^1.0.1",
-    "cordova-support-google-services": "^1.2.1",
+    "cordova-support-android-plugin": "1.0.1",
+    "cordova-support-google-services": "1.3.1",
     "cordova.plugins.diagnostic": "^4.0.12",
     "group-array": "^0.3.3",
     "ionic-angular": "3.9.2",
@@ -94,7 +96,10 @@
       "cordova-sqlite-storage": {},
       "mx.ferreyra.callnumber": {},
       "call-number": {},
-      "cordova-plugin-market": {}
+      "cordova-plugin-market": {},
+      "cordova-plugin-firebase-analytics": {
+        "FIREBASE_CORE_VERSION": "16.0.+"
+      }
     },
     "platforms": [
       "browser",
