--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "cordova-plugin-dialogs": "^2.0.1",
     "cordova-plugin-firebase-analytics": "1.1.1",
     "cordova-plugin-geolocation": "^4.0.1",
+    "cordova-plugin-google-analytics": "1.8.6",
     "cordova-plugin-googlemaps": "^2.5.2",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.4.0",
@@ -99,6 +100,9 @@
       "cordova-plugin-market": {},
       "cordova-plugin-firebase-analytics": {
         "FIREBASE_CORE_VERSION": "16.0.+"
+      },
+      "cordova-plugin-google-analytics": {
+        "GMS_VERSION": "11.0.1"
       }
     },
     "platforms": [
