--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "cordova.plugins.diagnostic": "^4.0.12",
     "group-array": "^0.3.3",
     "ionic-angular": "3.9.2",
+    "ionic3-star-rating": "^1.1.5",
     "ionicons": "3.0.0",
     "jquery": "^3.3.1",
     "mx.ferreyra.callnumber": "0.0.2",
